--- a/academic-butler-system/src/main/resources/application.properties
+++ b/academic-butler-system/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/academic
 spring.datasource.username=root
 spring.datasource.password=Hrup041001.
+jwt.secret=secret
+jwt.expiration=300
